added youtube link for qualifying match highlights

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <p class="placeholder">Fixtures will appear here once a team is selected.</p>
         <div id="fixturesList" aria-live="polite"></div>
       </section>
+
+      <section id="media" class="panel">
+        <h2>Qualifying highlight</h2>
+        <p class="placeholder">Pick a team to watch their qualifying story.</p>
+        <div id="mediaContent" aria-live="polite"></div>
+      </section>
     </main>
 
     <footer>
